# dimple

./: .gitignore  Cargo.toml  HACKING.md  PLUGINS.md  PROFILING.md  README.md  RESEARCH.md  TODO.md
.cargo/: config.toml
archive/dimple_librarian/: Cargo.toml
archive/dimple_librarian/src/: hydrate.rs  lib.rs  mock.rs  plugin.rs  sqlite_db.rs
archive/dimple_librarian/test.db/: library.db
archive/dimple_librarian/tests/: librarian.rs  merge.rs
dimple_cli/: Cargo.toml
dimple_core/: Cargo.toml  README.md  build.rs
dimple_core/src/: artist.rs  collection.rs  db.rs  image_cache.rs  import.rs  lib.rs  librarian.rs  library.rs  main.rs  merge.rs  model.rs  model_store.rs  notifier.rs  player.rs  plugin.rs  scanner.rs  source.rs  sync.rs
dimple_core/src/db/: memory_db.rs  sqlite_db.rs
dimple_core/src/import/: TODO.md  lofty_tagged_media_file.rs  media_file.rs  spotify.rs  symphonia_tagged_media_file.rs  tagged_media_file.rs
dimple_core/src/migrations/: 202411070001_initial.sql
dimple_core/src/migrations/01-initial_schema/: up.sql
dimple_core/src/migrations/02-playlist_additions/: up.sql
dimple_core/src/migrations/03-mediafile_additions/: up.sql
dimple_core/src/migrations/04-mediafile_woops/: up.sql
dimple_core/src/model/: art.rs  artist.rs  artist_credit.rs  artist_ref.rs  blob.rs  changelog.rs  dimage.rs  dimage_ref.rs  event.rs  genre.rs  genre_ref.rs  known_id.rs  link.rs  link_ref.rs  lyrics.rs  media_file.rs  medium.rs  mod.rs  picture.rs  playlist.rs  playlist_item.rs  recording.rs  recording_source.rs  release.rs  release_group.rs  tag.rs  track.rs  track_source.rs
dimple_core/src/player/: track_downloader.rs
dimple_core/src/plugins/: README.md  converters.rs  example.rs  fanart_tv.rs  lrclib.rs  mod.rs  musicbrainz.rs  plugin.rs  plugin_host.rs  plugins.rs  s3_api_sync.rs  wikidata.rs
dimple_core/src/services/: lrclib.rs  mod.rs
dimple_core/src/sync/: memory_storage.rs  storage.rs
dimple_core_nt/: Cargo.toml  README.md  dimple.db  expand.rs
dimple_core_nt/src/: crdt.rs  lib.rs  library.rs  main.rs  model.rs  player.rs  scanner.rs  sync.rs
dimple_core_nt/src/migrations/: 202411070001_initial.sql
dimple_core_nt/src/model/: artist.rs  blob.rs  changelog.rs  media_file.rs  playlist.rs  track.rs  track_source.rs
dimple_core_nt/src/scanner/: media_file.rs
dimple_core_nt/src/sync/: memory_storage.rs  s3_storage.rs  storage.rs
dimple_core_nt/tests/artifacts/: hello.txt
dimple_coverartarchive_plugin/: Cargo.toml
dimple_coverartarchive_plugin/src/: lib.rs
dimple_data/: Cargo.toml
dimple_data/src/: data_store.rs  main.rs  notifier.rs
dimple_fanart_tv_library/: Cargo.toml
dimple_fanart_tv_library/src/: dimple_fanart_tv_library.rs  lib.rs
dimple_lastfm_library/: Cargo.toml
dimple_lastfm_library/src/: dimple_lastfm_library.rs  lib.rs
dimple_librarian/: Cargo.toml
dimple_librarian/src/: art_gen.rs  db_merge.rs  equiv.rs  equivalent.rs  hydrate.rs  lib.rs  librarian.rs  matching.rs  merge.rs  nu_merge.rs  plugin.rs  plugin_loader.rs  search.rs  sqlite_db.rs  sqlite_db_2.rs
dimple_librarian/tests/: librarian.rs  sqlite_db.rs
dimple_librarian_tests/: Cargo.toml
dimple_librarian_tests/src/: lib.rs
dimple_mediafiles_plugin/: Cargo.toml
dimple_mediafiles_plugin/src/: lib.rs  media_file.rs
dimple_musicbrainz_library/: Cargo.toml
dimple_musicbrainz_library/src/: lib.rs  musicbrainz_library.rs
dimple_musicbrainz_plugin/: Cargo.toml
dimple_musicbrainz_plugin/src/: client.rs  converters.rs  lib.rs
dimple_navidrome_library/: Cargo.toml
dimple_navidrome_library/lib/: FIXME.md
dimple_navidrome_library/src/: lib.rs  navidrome_library.rs
dimple_player/: Cargo.toml
dimple_player/src/: downloader.rs  lib.rs  player.rs
dimple_s3_compatible_storage_library/: Cargo.toml
dimple_s3_compatible_storage_library/src/: lib.rs  s3_compatible_storage_library.rs
dimple_s3cs_library/: Cargo.toml
dimple_s3cs_library/src/: lib.rs  s3cs_library.rs
dimple_sled_library/: Cargo.toml
dimple_sled_library/src/: lib.rs  local_library.rs  sled_library.rs
dimple_sqlite3_library/: Cargo.toml
dimple_sqlite3_library/src/: lib.rs
dimple_ui_egui/: Cargo.toml
dimple_ui_egui/src/: dimple.rs  dimple_library.rs  lib.rs  librarian.rs  main.rs  player.rs
dimple_ui_egui/src/music_library/: image_cache.rs  local_library.rs  memory_library.rs  mod.rs  navidrome_library.rs
dimple_ui_egui/src/settings/: mod.rs
dimple_ui_egui/src/ui/: card_grid.rs  cards.rs  player_bar.rs  retained_images.rs  theme.rs
dimple_ui_slint/: Cargo.toml  README.md  build.rs  deploy.sh
dimple_ui_slint/images/: artist_placeholder.afdesign  icon_512x512.afdesign  release_placeholder.afdesign
dimple_ui_slint/src/: README.md  app_window_controller.rs  config.rs  image.rs  images.rs  lib.rs  librarian.rs  main.rs  settings.rs  ui.rs
dimple_ui_slint/src/ui/: app_window_controller.rs  common.rs  flow_layout.rs  image_gen.rs  images.rs  mod.rs  player_bar.rs  side_bar.rs
dimple_ui_slint/ui/: album_details.slint  app_window.slint  appwindow.slint  artist_details.slint  card.slint  card_grid.slint  cardgrid.slint  common.slint  home.slint  nav_bar.slint  player_bar.slint  recording_details.slint  release_details.slint  release_group_details.slint  settings.slint  side_bar.slint
dimple_ui_slint/ui/components/: action_buttons.slint  basic_table_view.slint  border_image.slint  card.slint  card_grid.slint  flow_layout.slint  hrule.slint  lazy_image.slint  link.slint  medium.slint  popup_menu.slint  tag.slint  tag_card_grid.slint  track_list.slint
dimple_ui_slint/ui/pages/: artist_details.slint  artist_list.slint  event_list.slint  genre_details.slint  genre_list.slint  history_list.slint  home.slint  playlist_details.slint  playlist_list.slint  queue_details.slint  recording_details.slint  release_details.slint  release_group_details.slint  release_group_list.slint  release_list.slint  search.slint  search_results.slint  settings.slint  track_details.slint  track_list.slint
dimple_wikidata_plugin/: Cargo.toml
dimple_wikidata_plugin/src/: lib.rs
(+120 files in other folders)
