[package]
name = "dimple"
version = "0.1.0"
authors = ["Jason von Nieda <jason@vonnieda.org>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
publish = false
default-run = "dimple"

[dependencies]
eframe = {version = "0.21.3", features = ["default_fonts"] }
egui_extras = { version = "0.21.0", features = ["image"] }
env_logger = "0.10.0"
fuzzy-matcher = "*"
image = { version = "0.24.5", features = ["jpeg", "png"] }
log = "0.4.17"
sunk = { path = "lib/sunk" }
sled = "0.34.7"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
walkdir = "2.3.3"
url = "2.3.1"
ulid = "1.0.0"
serde_yaml = "0.9.19"
config = "0.13.3"
sha2 = "0.10.6"
data-encoding = "2.3.3"
threadpool = "1.8.1"
playback-rs = "0.4.2"
resvg = "0.31.0"
prominence = "0.1.0"


