[workspace]
members = [
    "dimple_core",
    "dimple_librarian",
    # "dimple_player",
    "dimple_sled_library",
    "dimple_deezer_library",
    "dimple_musicbrainz_library",
    "dimple_fanart_tv_library",
    "dimple_theaudiodb_library",
    "dimple_lastfm_library",
    "dimple_ui_slint",
    # "dimple_s3_compatible_storage_library",
    # "dimple_sqlite3_library",
    # "dimple_navidrome_library",
    "dimple_file_library",
    "dimple_cli",
    # "dimple_ui_egui",
]
resolver="2"

#[toolchain]
#channel = "nightly"

