[package]
name = "dimple_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
dimple_core = { path = "../dimple_core" }
dimple_librarian = { path = "../dimple_librarian" }
dimple_deezer_library = { path = "../dimple_deezer_library" }
dimple_musicbrainz_library = { path = "../dimple_musicbrainz_library" }
dimple_wikidata_library = { path = "../dimple_wikidata_library" }
