[package]
name = "dimple_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.1", features = ["jpeg", "png"] }
serde = { version = "1.0.158", features = ["derive"] }
log = "0.4.19"
anyhow = "1.0.81"
uuid = { version = "1.7.0", features = ["v4"] }
serde_json = "1.0.94"
sqlite = "0.34.0"
dimple_core_macro = { path = "../dimple_core_macro" }
bincode = "1.3.3"

