[package]
name = "dimple_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimple_core_macro = { path = "../dimple_core_macro" }
rust-s3 = { version = "0.33.0", features = ["sync-native-tls"], default-features = false }
playback-rs = "0.4.4"
rusqlite = { version = "0.32.1", features = ["bundled", "backup"] }
symphonia = { version = "0.5.4", features = ["all"] }
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"
tempfile = "3.13.0"
ulid = "1.1.3"
sha2 = { version = "0.10.8", features = ["asm", "asm-aarch64"] }
log = "0.4.22"
env_logger = "0.11.5"
blake3 = "1.5.4"
rayon = "1.10.0"
image = "0.25.5"
directories = "5.0.1"
tantivy = "0.22.0"
threadpool = "1.8.1"
