[package]
name = "dimple_coverartarchive_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
image = { version = "0.25.1", features = ["jpeg", "png"] }
log = "0.4.17"
dimple_core = { path = "../dimple_core" }
dimple_librarian = { path = "../dimple_librarian" }
musicbrainz_rs = { version = "0.5.0", default-features = false, features = ["blocking"] }
reqwest = { version = "0.11.23", features = ["json"] }
