[package]
name = "dimple_data"
version = "0.1.0"
edition = "2021"

[dependencies]
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.1", features = ["bundled", "backup", "chrono"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
uuid = { version = "1.10.0", features = ["v4"] }
ulid = "1.1.3"
