[package]
name = "dimple_librarian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sled = "0.34.7"
image = { version = "0.24.5", features = ["jpeg", "png"] }
log = "0.4.17"
dimple_core = { path = "../dimple_core" }
dimple_sled_library = { path = "../dimple_sled_library" }
rayon = "1.8.0"
fuzzy-matcher = "0.3.7"
