[package]
name = "dimple_librarian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimple_core = { path = "../dimple_core" }
log = "0.4.17"
anyhow = "1.0.81"
image = { version = "0.24.5", features = ["jpeg", "png"] }
# serde = { version = "1.0.158", features = ["derive"] }
# serde_json = "1.0.94"
# sled = "0.34.7"
# dimple_sled_library = { path = "../dimple_sled_library" }
# rayon = "1.8.0"
# strsim = "0.11.0"
# unicode-normalization = "0.1.23"
