[package]
name = "dimple_librarian_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
dimple_core = { path = "../dimple_core" }
dimple_librarian = { path = "../dimple_librarian" }
dimple_player = { path = "../dimple_player" }
dimple_mediafiles_plugin = { path = "../dimple_mediafiles_plugin" }
dimple_musicbrainz_plugin = { path = "../dimple_musicbrainz_plugin" }
dimple_fanart_tv_plugin = { path = "../dimple_fanart_tv_plugin" }
dimple_wikidata_plugin = { path = "../dimple_wikidata_plugin" }
dimple_coverartarchive_plugin = { path = "../dimple_coverartarchive_plugin" }
dimple_theaudiodb_plugin = { path = "../dimple_theaudiodb_plugin" }
