[package]
name = "dimple_mediafiles_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
dimple_core = { path = "../dimple_core" }
dimple_librarian = { path = "../dimple_librarian" }
image = { version = "0.24.5", features = ["jpeg", "png"] }
serde = { version = "1.0.158", features = ["derive"] }
log = "0.4.17"
symphonia = { version = "0.5.3", features = ["all"] }
rayon = "1.8.0"
fuzzy-matcher = "0.3.7"
anyhow = "1.0.81"

