[package]
name = "dimple_s3_compatible_storage_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimple_core = { path = "../dimple_core" }
image = { version = "0.24.5", features = ["jpeg", "png"] }
serde = { version = "1.0.158", features = ["derive"] }
sled = "0.34.7"
rust-s3 = { version = "0.33.0", features = ["sync-native-tls"], default-features = false }
log = "0.4.17"
symphonia = { version = "0.5.3", features = ["all"] }


