[package]
name = "dimple_sled_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sled = "0.34.7"
image = { version = "0.24.5", features = ["jpeg", "png"] }
log = "0.4.17"
threadpool = "1.8.1"
dimple_core = { path = "../dimple_core" }
