[package]
name = "dimple_ui_egui"
version = "0.1.0"
authors = ["Jason von Nieda <jason@vonnieda.org>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
publish = false
default-run = "dimple_ui_egui"

[toolchain]
channel = "nightly"

[dependencies]
eframe = {version = "0.22", features = ["default_fonts"] }
egui_extras = { version = "0.22", features = ["image"] }
env_logger = "0.10.0"
fuzzy-matcher = "*"
image = { version = "0.24.5", features = ["jpeg", "png"] }
log = "0.4.17"
walkdir = "2.3.3"
url = "2.3.1"
ulid = "1.0.0"
serde_yaml = "0.9.19"
config = "0.13.3"
resvg = "0.31.0"
prominence = "0.1.0"
egui-phosphor = "0.1.0"


