[package]
name = "dimple_ui_slint"
version = "0.1.0"
authors = ["Jason von Nieda <jason@vonnieda.org>"]
edition = "2021"
build = "build.rs"
description = "Dimple is an open source, cross-platform music player that celebrates music and privacy."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
slint = { version = "= 1.4.1", default-features = true }
env_logger = "0.10.0"
dimple_core = { path = "../dimple_core" }
dimple_player = { path = "../dimple_player" }
dimple_mediafiles_plugin = { path = "../dimple_mediafiles_plugin" }
# dimple_navidrome_library = { path = "../dimple_navidrome_library" }
# dimple_s3_compatible_storage_library = { path = "../dimple_s3_compatible_storage_library" }
# dimple_coverartarchive_library = { path = "../dimple_coverartarchive_library" }
dimple_musicbrainz_plugin = { path = "../dimple_musicbrainz_plugin" }
# dimple_lastfm_library = { path = "../dimple_lastfm_library" }
# dimple_deezer_library = { path = "../dimple_deezer_library" }
# dimple_fanart_tv_library = { path = "../dimple_fanart_tv_library" }
# dimple_theaudiodb_library = { path = "../dimple_theaudiodb_library" }
dimple_wikidata_plugin = { path = "../dimple_wikidata_plugin" }
dimple_librarian = { path = "../dimple_librarian" }
serde = "1.0.175"
serde_json = "1.0.94"
image = "0.25.1"
url = "2.5.0"
opener = "0.6.1"
rayon = "1.8.0"
directories = "5.0.1"
rfd = "0.13.0"
souvlaki = "0.7.0"
fakeit = "1.2.0"
tiny-skia = "0.11.4"
threadpool = "1.8.1"
fast_image_resize = { version = "4.0.0", features = ["image"] }
percent-encoding = "2.3.1"
raw-window-handle = "0.6.2"

[build-dependencies]
slint-build = "= 1.4.1"

# https://github.com/burtonageo/cargo-bundle
[package.metadata.bundle]
name = "Dimple"
identifier = "lol.dimple.dimple_ui_slint"
icon = ["images/icon_512x512.png"]
# version = "0.0.1"
# resources = ["images/**", "icons/**", "fonts/**"]
# copyright = "Copyright (c) Jason von Nieda 2023-2024. All rights reserved."
category = "Music"
short_description = "Open source, cross-platform music player."
# long_description = """
# Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
# eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
# enim ad minim veniam, quis nostrud exercitation ullamco laboris
# nisi ut aliquip ex ea commodo consequat.
# """
# deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
# osx_frameworks = ["OpenGL"]
osx_url_schemes = ["lol.dimple.dimple_ui_slint", "dimple://"]

