[package]
name = "dimple_wikidata_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimple_core = { path = "../dimple_core" }
dimple_librarian = { path = "../dimple_librarian" }
serde = { version = "1.0.158", features = ["derive"] }
anyhow = "1.0.81"
url = "2.5.1"
