[package]
name = "dimple_librarian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimple_core = { path = "../dimple_core" }
log = "0.4.17"
anyhow = "1.0.81"
image = { version = "0.25.1", features = ["jpeg", "png"] }
rayon = "1.8.0"
strsim = "0.11.0"
unicode-normalization = "0.1.23"
fuzzy-matcher = "0.3.7"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
cacache = { version = "*", default-features = false, features = ["mmap"] }
serde_json = "1.0.117"
serde = "1.0.203"
rusqlite = "0.31.0"
uuid = { version = "1.7.0", features = ["v4"] }
fakeit = "1.2.0"
async-trait = "0.1.81"
libloading = "0.8.5"
